--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 
-/* https://plus.unsplash.com/premium_photo-1661503285736-9dec3c8280f7?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
- https://images.unsplash.com/photo-1415369629372-26f2fe60c467?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
- */
 .textstyle {
     text-align: center;
     font-family: Helvetica, Verdana, sans-serif;
@@ -9,23 +6,39 @@
 }
 
 .vid {
-    background-color: aquamarine;
+    background-color: lavender;
     padding: 1em;
 }
 
 #nameImage {
-    background-color: antiquewhite;
-    padding: 5em;
+    background-image: url("handpaw.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 5.5rem;
+    color: lavender;
+    font-size: 5em;
+    /* -webkit-text-stroke: 0.25m black; */
 }
 
 #introBlurb {
     padding: 3em;
-    margin: 1em auto;
+    margin: 2rem auto;
     max-width: 60%;
 }
 
 #media {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* grid-template-columns: 1fr 1fr; */
     column-gap: 0.5em;
+}
+
+#pitch {
+    flex-grow: 1;
+}
+
+#showAndTell {
+    flex-grow: 1;
 }
