--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .vid {
     background-color: lavender;
     padding: 1em;
-    flex-grow: 45%;
+    flex: 1 0 45%;
 }
 
 #nameImage {
@@ -33,5 +33,5 @@
     flex-direction: row;
     flex-wrap: wrap;
     /* grid-template-columns: 1fr 1fr; */
-    column-gap: 0.5em;
+    gap: 0.5em;
 }
